[project]
name = "llm-openhands"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = "nikkie"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "llm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ftnext/llm-openhands"
Changelog = "https://github.com/ftnext/llm-openhands/releases"
Issues = "https://github.com/ftnext/llm-openhands/issues"
CI = "https://github.com/ftnext/llm-openhands/actions"

[project.entry-points.llm]
openhands = "llm_openhands"

[project.optional-dependencies]
test = ["pytest"]
